[tool.poetry]
name = "my_project"
version = "0.1.0"
description = ""
authors = ["Nikita Fedoseev <bobinslive@gmail.com>"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
flake8 = "^6.0.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"


# ======================
# Конфигурация Black
# ======================
[tool.black]
line-length = 119
target-version = ['py310']
exclude = '''
/\.git$
'''

# ======================
# Конфигурация isort
# ======================
[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_third_party = []
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# ======================
# Конфигурация mypy
# ======================
[tool.mypy]
files = ["src/"]
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
exclude = ["venv"]